Import old 2013 files
* Add livereload infrastructure
* Remove extra images
* Tweak styles slightly

--- a/source/articles/2013/detropia.md.erb
+++ b/source/articles/2013/detropia.md.erb
@@ -1,10 +1,13 @@
 ---
 title: "Detropia"
 date: 2013-08-11
-categories: [detroit, detropia, michigan, documentaries, netflix]
+author: Adarsh Pandit
+description: Another great Detroit documentary
+category: writing
+tags: [detroit, detropia, michigan, documentaries, netflix]
 ---
 
-{% img https://s3.amazonaws.com/ksr/projects/157579/photo-main.jpg?1339096628 %}
+![detropia](https://s3.amazonaws.com/ksr/projects/157579/photo-main.jpg?1339096628)
 
 > If you were to visit the Detroit Institute of Arts, home to Diego Rivera’s magnificent murals depicting scenes at the Ford Motor Company in the early nineteen-thirties, and then take a stroll through the surrounding streets, you might be surprised at what you would find: coffee shops frequented by young hipsters; old warehouses being converted to lofts; bike racks; houses undergoing renovation; a new Whole Foods supermarket. After decades of white flight, black flight, and urban decay, Detroit is being spoken of, in some circles, as "the new Portland," or "the new Brooklyn." -[The New York Post, August 5, 2013][1]
 
@@ -15,17 +18,16 @@ but focuses a lot more on Old Detroit than it's future.
 
 <!-- more -->
 
-It's hard to watch. I wrote [this][3] on the old blog when things were at their
-worst (2009). Since then, a lot has changed, mostly for the better. There is a
-lot of this "New Brooklyn/Portland" talk, and the artists have not stopped
-showing up in the city. As [Richard Florida writes in the Atlantic][5], Detroit
-is not dead.
+It's hard to watch. I wrote <%= link_to('this', '/2009/the-final-straw') %> on
+the old blog when things were at their worst (2009). Since then, a lot has
+changed, mostly for the better. There is a lot of this "New Brooklyn/Portland"
+talk, and the artists have not stopped showing up in the city. As [Richard
+Florida writes in the Atlantic][4], Detroit is not dead.
 
 First come the artists, then the gay community, then entrepreneurs, yuppies, and
-realtors. Let's economic vacuums are filled fast.
+realtors. Economic vacuums are filled fast.
 
 [1]: http://www.newyorker.com/talk/comment/2013/08/05/130805taco_talk_cassidy
 [2]: http://www.detropiathefilm.com/
 [3]: http://movies.netflix.com/WiMovie/70229260?strkid=1183731691_0_0&trkid=222336&movieid=70229260
-[4]: http://activationenergy.wordpress.com/2009/01/04/the-final-straw/
-[5]: http://www.theatlanticcities.com/jobs-and-economy/2013/07/dont-let-bankruptcy-fool-you-detroits-not-dead/6261/
+[4]: http://www.theatlanticcities.com/jobs-and-economy/2013/07/dont-let-bankruptcy-fool-you-detroits-not-dead/6261/
