--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -138,8 +138,8 @@ body {
     }
 
     h2 {
-      font-weight: normal;
-      font-size: 1.2em;
+      font-weight: bold;
+      font-size: 1.3em;
     }
 
     h3 {
