--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,7 +4,9 @@ description:
 ---
 
 %h1 Adarsh Pandit
-%h3{class: 'tagline'} Tagline
+%h3{class: 'tagline'}
+  Ruby Developer at
+  =link_to('thoughtbot', 'http://thoughtbot.com')
 
 - blog.articles[0..50].each do |article|
   = partial 'article', locals: { article: article }
