--- a/source/_article.html.haml
+++ b/source/_article.html.haml
@@ -1,3 +1,7 @@
 %article
   %time= article.date.strftime('%b %e, %Y')
-  %h2= link_to article.title, article.url
+
+  %h2.title
+    = link_to article.title, article.url
+  %h4.description
+    = link_to article.data['description'], article.url
