Add Category pages
* Categories pages are at `/category/CATEGORY`
* Filled in missing categories
* Add home links
* Add links to categories

--- a/source/category.html.haml
+++ b/source/category.html.haml
@@ -8,5 +8,6 @@ title: Adarsh Pandit's Blog
   Ruby Developer at
   =link_to('thoughtbot', 'http://thoughtbot.com')
 
-- blog.articles.each do |article|
-  = partial 'article', locals: { article: article }
+- blog.articles.select do |article|
+  - if article.data.category.include?(category)
+    = partial 'article', locals: { article: article }
