--- a/source/stylesheets/_code-highlight.css
+++ b/source/stylesheets/_code-highlight.css
@@ -2,8 +2,8 @@ pre.highlight {
   background-color: #ececec;
   border-left: 20px solid #d4d4d4;
   font-family: Monaco, Consolas, 'Lucida Console', monospace;
-  font-size: .7em;
-  line-height: 1.6em;
+  font-size: 1em;
+  line-height: 1.2em;
   margin: 15px 0px;
   overflow-x: auto;
   padding: 12px;
