--- a/source/articles/2013/detropia.md.erb
+++ b/source/articles/2013/detropia.md.erb
@@ -5,7 +5,7 @@ author: Adarsh Pandit
 description: Another great Detroit documentary
 category: writing
 tags: [detroit, detropia, michigan, documentaries, netflix]
-logo: http://upload.wikimedia.org/wikipedia/commons/2/20/Detroit_tigers_textlogo.svg
+logo: detroit_tigers_logo.svg
 ---
 
 ![detropia](https://s3.amazonaws.com/ksr/projects/157579/photo-main.jpg?1339096628)
