Post: Testing ActiveJob's error handling
Minor:
* Remove underlines from hyperlinks
* Fix error in the article template date field

--- a/source/new_article_template.html.erb
+++ b/source/new_article_template.html.erb
@@ -4,7 +4,7 @@ description:
 
 author: Adarsh Pandit
 category: writing
-date: = <%= @date %>
+date: <%= @date %>
 logo: http://www.example.com/logo.jpg
 published: true
 tags: []
