Fix Twitter Handle typo
* I'm not @adarsh, as much as I'd like to be.

--- a/source/_author.html.haml
+++ b/source/_author.html.haml
@@ -4,4 +4,4 @@
     %h6 Written by Adarsh Pandit
     %p
       Read more #{link_to 'posts by Adarsh', '/'}, and
-      #{link_to 'follow Adarsh on Twitter', 'https://twitter.com/adarsh'}.
+      #{link_to 'follow Adarsh on Twitter', 'https://twitter.com/adarshp'}.
