How to Run a Consulting Business and Source Leads
Reason for change:
* Write an article codifying lots of stuff I keep telling people

Changes:
* Draft a main article announcing the series
* Draft the first article on sourcing leads
* Link to an add old Google Reader post on networking, and make it live from the archive.

Minor:
* Add a new terminal icon
* Update information in the feed builder

https://trello.com/c/yaRwffCA/31-closing-leads-post

--- a/source/layouts/article.html.haml
+++ b/source/layouts/article.html.haml
@@ -2,7 +2,7 @@
   %h1
     = link_to current_page.data.title, current_page.url
   .published
-    %time= current_page.data.date.strftime('%b %d, %Y')
+    %time= current_page.data.date.strftime('%b %-d, %Y')
     %span By #{link_to 'Adarsh Pandit', '/'}
     %span in #{link_to current_page.data.category, category_path(current_page.data.category)}
   .content
