--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -266,3 +266,10 @@ blockquote {
     white-space: pre-wrap;
   }
 }
+
+.footer {
+  display: block;
+  font-style: italic;
+  padding-bottom: 10em;
+  text-align: center;
+}
