Fix console errors
Reason for change:
* `initial-scale:1.0` and `maximum-scale:1.0` are both ignored

What the change was:
* Removed those

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -2,7 +2,7 @@
   <!--[if IE]><script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'></script><![endif]-->
   %meta{charset:'utf-8'}
   <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-  %meta{content:'width=device-width,initial-scale:1.0,maximum-scale:1.0', name:'viewport'}
+  %meta{content:'width=device-width', name:'viewport'}
   %meta{name:'description', content: data.page.description}
 
   %title= current_page.data.title || settings.site_name
