Move the GA tracking code to the <HEAD>
Reason for change:
* Google hates that this wasn't in the <HEAD> tag

What the change was:
* Move it to the <HEAD>

--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -13,6 +13,8 @@
   - if current_page.data.author
     %link{href: 'https://plus.google.com/116006351214905134217', rel:'author'}
 
+  = google_analytics_universal_tag
+
 %body
   .container
     = yield
