Don't publish the template
Reason for change:
* The template blog post was being published. This is bad.

What the change was:
* Don't publish that file by setting published to false

--- a/source/new_article_template.html.erb
+++ b/source/new_article_template.html.erb
@@ -6,6 +6,6 @@ author: Adarsh Pandit
 category: writing
 date: <%= @date %>
 logo: http://www.example.com/logo.jpg
-published: true
+published: false
 tags: []
 ---
