--- a/source/stylesheets/base/_code-highlight.css
+++ b/source/stylesheets/base/_code-highlight.css
@@ -12,7 +12,7 @@ pre.highlight {
 code {
   background-color: #ececec;
   font-family: Monaco, Consolas, 'Lucida Console', monospace;
-  font-size: .7em;
+  font-size: 0.7em;
   padding: 2px;
 }
 
