--- a/source/layouts/article.html.haml
+++ b/source/layouts/article.html.haml
@@ -1,10 +1,15 @@
 = wrap_layout :layout do
-  %h1
-    = link_to current_page.data.title, current_page.url
-  .published
-    %time= current_page.data.date.strftime('%b %-d, %Y')
-    %span By #{link_to 'Adarsh Pandit', '/'}
-    %span in #{link_to current_page.data.category, category_path(current_page.data.category)}
-  .content
-    = yield
-    = partial 'author'
+  .article-container
+    %h3.article-title
+      = link_to(current_page.data.title, current_page.url)
+
+    %h6.timestamp
+      %time= current_page.data.date.strftime('%b %-d, %Y')
+      %span
+        By #{link_to 'Adarsh Pandit', '/'}
+      %span
+        in
+        #{link_to current_page.data.category, category_path(current_page.data.category)}
+    .content
+      = yield
+      = partial 'author'
