--- a/source/partials/_article.html.haml
+++ b/source/partials/_article.html.haml
@@ -1,24 +1,24 @@
-%article
-  .post-attributes
+.article-index
+  .article-properties
     - if article.data['logo'].present?
-      = image_tag(article.data['logo'], class: 'logo')
+      = image_tag(article.data['logo'], class: 'icon')
     -elsif article.data['source'] =~ /thoughtbot/
-      = image_tag('thoughtbot_logo.svg', class: 'logo')
+      = image_tag('thoughtbot_logo.svg', class: 'icon')
     -else
-      = image_tag('solid_white.svg', class: 'logo')
+      = image_tag('solid_white.svg', class: 'icon')
 
-    %time= article.date.strftime('%b %e, %Y')
+    .timestamp
+      = article.date.strftime('%b %e, %Y')
 
-  - if article.data['source'].blank?
-    .blog-info
-      %h2.title
+  .blog-title
+    - if article.data['source'].blank?
+      %h3.title
         = link_to article.title, article.url
       %h4.description
         = link_to article.data['description'], article.url
 
-  - else
-    .blog-info
-      %h2.title
+    - else
+      %h3.title
         = link_to article.title, article.data['source']
       %h4.description
         = link_to article.data['description'], article.data['source']
