Fix build error
Reason for change:
* Category pages couldn't find the `_article` partial

What the change was:
* Correct the reference

--- a/source/category.html.haml
+++ b/source/category.html.haml
@@ -10,4 +10,4 @@ title: Adarsh Pandit's Blog
 
 - blog.articles.select do |article|
   - if article.data.category.include?(category)
-    = partial 'article', locals: { article: article }
+    = partial 'partials/article', locals: { article: article }
