Join the hotline webring
This can only mean one thing!

Docs, of a sort: http://hotlinewebring.club/

--- a/source/layouts/header.html.haml
+++ b/source/layouts/header.html.haml
@@ -1,7 +1,7 @@
 %h1.blog-title
-  = link_to('←', 'http://alexfox.me', title: 'Yes, this is a webring')
+  = link_to('←', 'http://hotlinewebring.club/adarsh/previous', title: 'Yes, this is a webring')
   = link_to('Adarsh Pandit', '/')
-  = link_to('→', 'http://gabebw.com', title: 'Yes, this is a webring')
+  = link_to('→', 'http://hotlinewebring.club/adarsh/next', title: 'Yes, this is a webring')
 
 %h2.blog-subtitle
   Software Developer
