Upgrade to Middleman 4.0
Reason for Change
=================
* I foolishly upgraded gems some time ago and it totally broke the whole app.
* Importantly, the `middleman` gem bumped to over 4.0.0 and it required lots of different things, notably specific file extensions which were different from what I had.
* I've been messing with this for months, just trying to get it back to healthy. Excited to finally have it back online. I hope I don't futz with it again :)

Fixes for Middleman 4.0
=======================
* Change configuration for `middleman-deploy`.
* Rename source article files from *.md > *.html.md:

```
zmv '(**/)(*).md' '$1$2.html.md'
```

* Replace `middleman-neat` gem with `bourbon` and `neat` gems. The extension system is totally different and not all of them are up-to-date now.
* Add some todo gems in the `Gemfile`.
* Don't use `.erb` extension for articles to be consistent.
* Rename master stylesheet from `application.scss` > `all.css.scss`.

Some of this was useful: https://middlemanapp.com/basics/upgrade-v4/

Style Fixes
===========
* Change the action color to [cylinder-blue].
* Change link text color on hover.
* Fix the h-tag sizes in the article.
* Space out the paragraph margins.
* In the article templates, use hashes for markdown h-tags instead of `====`.

Minor
=====
* Only enable Google Analytics for the build environment.

[cylinder-blue]: https://github.com/adarsh/cylinder-marketing/blob/22a4729bf7c3008f3ffd36f75d9cb53729e5b6b1/source/assets/stylesheets/base/_variables.scss#L23

--- a/source/new_article_template.html.erb
+++ b/source/new_article_template.html.erb
@@ -4,8 +4,9 @@ description:
 
 author: Adarsh Pandit
 category: writing
-date: <%= @date %>
-logo: http://www.example.com/logo.jpg
+date: <%= @date.strftime('%F') %>
+logo: terminal_icon.png
+
 published: false
 no_index: true
 tags: []
