--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -4,7 +4,7 @@ $visual-grid: false;
 // Colors
 $black: #000000;
 $white: #ffffff;
-$blue: #3b9fed;
+$blue: #2a98ff; // colourlovers.com/color/2A98FF/Roller_Disco
 $dark-gray: #0f0f0f;
 $dark-gray-opacity: rgba(26, 26, 26, 0);
 $medium-gray: #4d4d4d;
