--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -5,18 +5,19 @@
     %meta{charset:'utf-8'}
     <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
     %meta{content:'width=device-width', name:'viewport'}
-    %meta{name:'description', content: data.page.description}
+    %meta{name:'description', content: current_page.data.description}
 
     %title= current_page.data.title || settings.site_name
 
     %link{href: 'feed.xml', rel: 'alternate', title: 'RSS', type: 'application/rss+xml'}
 
-    = stylesheet_link_tag 'application'
+    = stylesheet_link_tag 'all'
 
     - if current_page.data.author
       %link{href: 'https://plus.google.com/116006351214905134217', rel:'author'}
 
-    = google_analytics_universal_tag
+    - if build?
+      = google_analytics_universal_tag
 
   %body
     .body-container
