--- a/source/layouts/footer.html.haml
+++ b/source/layouts/footer.html.haml
@@ -1,3 +1,5 @@
 = link_to('RSS Feed', '/feed.xml')
 |
 = link_to('@adarshp', 'https://twitter.com/adarshp')
+|
+= link_to('Source Code', 'https://github.com/adarsh/blog')
