--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -22,6 +22,7 @@
   %body
     .body-container
       .header-container
+        = partial('layouts/hello_bar')
         = partial('layouts/header')
 
       = yield
