Update index.html.haml to add Mastodon tag.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,3 +6,5 @@ description: Adarsh Pandit's Blog - Ruby, Rails, JavaScript, Detroit, Life
 .articles-container
   - blog.articles.each do |article|
     = partial 'partials/article', locals: { article: article }
+
+<a rel="me" href="https://ruby.social/@adarsh">Mastodon</a>
